--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
 
+    compile 'com.google.android.gms:play-services-appindexing:9.0.2'
 }
