--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,16 @@
     <!-- Needed to check if cell network available -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- Needed to check SMS' for alerts -->
+    <!-- Needed to access gmail accounts -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <!-- Needed to notify users of alerts -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <!-- Needed to check SMS' for alerts -->
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <!--<uses-permission android:name="android.permission.RECEIVE_SMS" /> -->
 
-    <!-- Needed to set alaram at boot time -->
+    <!-- Needed to set alarm at boot time -->
     <uses-permission android:name="RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -27,12 +27,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="Klokken Message Checker and Ringer"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:label="Klokken Message Checker and Ringer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -45,16 +45,26 @@
             android:isolatedProcess="false"
             android:label="@string/ServiceName" />
 
-        <receiver android:name=".BootReceiverForTimer"
+        <receiver
+            android:name=".MainActivity$BootReceiverForTimer"
             android:enabled="false">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.klokkenapp.klokken.MainActivity" />
+        </activity>
 
     </application>
 
