--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/klokken"
         android:label="Klokken Message Checker and Ringer"
         android:theme="@style/AppTheme">
 
         <activity
             android:name=".MainActivity"
-            android:label="Klokken Message Checker and Ringer">
+            android:label="Klokken">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
