Orientation + Alert Occurrence
Orientation: Fix null gmail message, orientation change does not
relaunch activity
Alert Occurrence: If no new messages exist, no alert appears

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="Klokken">
+            android:label="Klokken"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
