Handle Notification Click
-Notification click now opens existing activity
-Manifest - android:launchMode="singleTop

"If the target task already has an existing instance of the activity at
the top of its stack, that instance will receive the new intent (in an
onNewIntent() call); a new instance is not created."

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity
             android:name=".MainActivity"
             android:label="Klokken"
+            android:launchMode="singleTop"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
