--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,10 +48,11 @@
             android:label="@string/ServiceName" />
 
         <receiver
-            android:name=".MainActivity$BootReceiverForTimer"
+            android:name=".BootReceiverForTimer"
             android:enabled="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="SetAlarm" />
             </intent-filter>
         </receiver>
 
