--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.klokkenapp.klokken"
-        minSdkVersion 21
-        targetSdkVersion 23
+        minSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -23,17 +23,18 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile('com.google.api-client:google-api-client-android:1.22.0') {
+
+    implementation  fileTree(dir: 'libs', include: ['*.jar'])
+    implementation ('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
-    compile('com.google.apis:google-api-services-gmail:v1-rev48-1.22.0') {
+    implementation ('com.google.apis:google-api-services-gmail:v1-rev83-1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
 
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.android.gms:play-services-auth:9.0.2'
-    compile 'pub.devrel:easypermissions:0.1.5'
-    compile 'com.google.android.gms:play-services-appindexing:9.0.2'
-    compile 'com.android.support:support-v4:23.4.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation  'com.google.android.gms:play-services-auth:17.0.0'
+    implementation  'pub.devrel:easypermissions:0.3.0'
+    implementation  'com.google.firebase:firebase-appindexing:19.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
