--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,9 @@ dependencies {
     }
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation  'com.google.android.gms:play-services-auth:17.0.0'
+    implementation "com.android.support:support-compat:28.0.0"
+    implementation  'com.google.android.gms:play-services-auth:18.0.0'
     implementation  'pub.devrel:easypermissions:0.3.0'
-    implementation  'com.google.firebase:firebase-appindexing:19.0.0'
+    implementation  'com.google.firebase:firebase-appindexing:19.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
